# mdix-converter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-wasm.yml  deploy.yml  init-project.yml  nuke-workflow-history.yml
.mdix/: .manifest.mdix
.mdix/project_structure/: project_structure.mdix
crates/converter-core/: Cargo.toml
crates/converter-core/src/: lib.rs
crates/converter-core/src/emitter/: formatter.rs  mod.rs
crates/converter-core/src/induction/: enums.rs  functions.rs  math.rs  mod.rs
crates/converter-core/src/ingestion/: ir.rs  json.rs  mod.rs  toml_input.rs
crates/converter-core/src/naming/: heuristics.rs  mod.rs
crates/converter-core/tests/: integration_test.rs
crates/converter-core/tests/fixtures/: weapons_optimized.mdix  weapons_raw.json
crates/converter-wasm/: Cargo.toml
crates/converter-wasm/src/: lib.rs
web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.toml
web/src/: app.css  app.d.ts  app.html
web/src/lib/routes/: +layout.svelte  +page.svelte
web/src/lib/stores/: converter.ts  wasm.ts
