[package]
name        = "converter-wasm"
version     = "0.1.0"
edition     = "2021"
description = "wasm-bindgen glue for converter-core"
license     = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
converter-core    = { path = "../converter-core" }
wasm-bindgen      = "0.2"
console_error_panic_hook = "0.1"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
